# albion-online-addons

./: .appveyor.yml  .gitignore  .travis.yml  Cargo.toml  LICENSE-APACHE  README.md  build.rs  setup.py
.github/workflows/: rust.yml
aoaddons-node/: Cargo.toml  build.rs
aoaddons-node/src/: convert.rs  lib.rs
aoaddons-python/: Cargo.toml  README.md  setup.py
aoaddons-python/pyaoaddons/: __init__.py  item_category_mapping.py  localization_mapping.py
aoaddons-python/scripts/: build-wheels.sh  mac  travis  upload
aoaddons-python/src/: convert.rs  lib.rs
aostats/: __init__.py
assets/: item_ids.txt  messages.json
lib/photon-decode/src/: codes.rs  decode.rs  lib.rs
scripts/: generate_assets.sh  item_category_map.py  localization.py
src/: config.rs  lib.rs  lib_python.rs  packetprinter.rs  translate.rs
src/game/: convert.rs  events.rs  world.rs
src/photon_decode/: decode.rs  layout.rs  mod.rs
src/photon_decode/tests/: decoding_tests.rs  integration_tests.rs  mod.rs
src/photon_messages/: itemdb.rs  messages.rs  mod.rs
