[package]
name = "aoaddons"
version = "0.1.0"
authors = ["Wiktor Mazur <wiktormazur1@gmail.com>"]
edition = "2018"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "aoaddons-python", "aoaddons-node"
]

[lib]
name = "aoaddons"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"

[dependencies]
packet_sniffer = { path = "./lib/packet-sniffer" }
photon_decode = { path = "./lib/photon-decode" }
bytes = "0.4"
simplelog = "0.6"
timer = "0.1"
chrono = "0.4"
log = { version = "0.4", features = ["std"] }
lazy_static = "1.2"
derive_more = "0.99"

[build-dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
fake_clock = "0.3.0"