[package]
name = "aoaddons"
version = "0.1.1"
authors = ["Wiktor Mazur <wiktormazur1@gmail.com>"]
edition = "2018"
description = "Simple library for creating addons for albion online game in multiple programing languages."
repository = "https://github.com/mazurwiktor/albion-online-addons"
license = "MIT/Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/albion-online-addons/*/albion-online-addons/"
categories = ["network-programming", "encoding"]
keywords = ["games", "albiononline", "photon", "unity", "albion"]
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

include = [
    "**/*.rs",
    "Cargo.toml",
    "assets"
]

[lib]
name = "aoaddons"

[[bin]]
name = "packetprinter"
path = "src/packetprinter.rs"


[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"

[dependencies]
pnet = "0.25.0"
bytes = "0.4"
simplelog = "0.6"
timer = "0.1"
chrono = "0.4"
log = { version = "0.4", features = ["std"] }
lazy_static = "1.2"
derive_more = "0.99"

[build-dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
fake_clock = "0.3.0"