[package]
name = "aoaddonsjs"
version = "0.1.0"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]
authors = ["Wiktor Mazur <wiktormazur1@gmail.com>"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "aoaddonsjs"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.3.3"

[dependencies]
aoaddons = { path = ".." }
neon = "0.3"
lazy_static = "1.2"
log = { version = "0.4", features = ["std"] }
