[package]
name = "libpyaoaddons"
version = "0.1.0"
authors = ["Wiktor Mazur <wiktormazur1@gmail.com>"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "libpyaoaddons"
crate-type = ["cdylib"]

[dependencies.cpython]
version = "0.3"

[dependencies]
aoaddons = { path = ".." }
lazy_static = "1.2"
log = { version = "0.4", features = ["std"] }
